// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ListItem default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="MuiButtonBase-root-12 MuiListItem-root-2 MuiListItem-default-5 MuiListItem-gutters-9 MuiListItem-button-10"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiListItemText-root-14 MuiListItemText-inset-15"
          />
          <span
            className="MuiTouchRipple-root-20"
          />
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                ListItem
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                default
              </h2>
            </div>
            <div
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitFontSmoothing": "antialiased",
                    "color": "#444",
                    "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                    "fontSize": "15px",
                  }
                }
              >
                common info
              </div>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    WithStyles(ListItems)
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  WithStyles(ListItems)
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        classes
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        innerRef
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListItem with data 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="MuiButtonBase-root-38 MuiListItem-root-28 MuiListItem-default-31 MuiListItem-gutters-35 MuiListItem-button-36"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            aria-hidden={true}
            className="fa fa-true MuiListItemIcon-root-40"
          />
          <div
            className="MuiListItemText-root-41 MuiListItemText-inset-42"
          >
            <h3
              className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
            >
              Name
            </h3>
          </div>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-71"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root-77"
          />
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                ListItem
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                with data
              </h2>
            </div>
            <div
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitFontSmoothing": "antialiased",
                    "color": "#444",
                    "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                    "fontSize": "15px",
                  }
                }
              >
                common info
              </div>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    WithStyles(ListItems)
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        id
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            0
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        name
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            Name
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        handleClick
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#170",
                                }
                              }
                            >
                              handleClick()
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        icon
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            menu
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        subcategory
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    id
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    1
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Name
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    icon
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    menu
                                    "
                                  </span>
                                  , 
                                  …
                                  }
                                </span>
                                }
                              </span>
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  WithStyles(ListItems)
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        classes
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        innerRef
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListItem with data and icon 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="MuiButtonBase-root-99 MuiListItem-root-89 MuiListItem-default-92 MuiListItem-gutters-96 MuiListItem-button-97"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            aria-hidden={true}
            className="fa fa-true MuiListItemIcon-root-101"
          />
          <div
            className="MuiListItemText-root-102 MuiListItemText-inset-103"
          >
            <h3
              className="MuiTypography-root-108 MuiTypography-subheading-115 MuiListItemText-primary-105"
            >
              Name
            </h3>
          </div>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-132"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root-138"
          />
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                ListItem
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                with data and icon
              </h2>
            </div>
            <div
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitFontSmoothing": "antialiased",
                    "color": "#444",
                    "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                    "fontSize": "15px",
                  }
                }
              >
                common info
              </div>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    WithStyles(ListItems)
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        id
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            0
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        name
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            Name
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        handleClick
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#170",
                                }
                              }
                            >
                              handleClick()
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        icon
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            menu
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        subcategory
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    id
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    1
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Name
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    icon
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    menu
                                    "
                                  </span>
                                  , 
                                  …
                                  }
                                </span>
                                }
                              </span>
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  WithStyles(ListItems)
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        classes
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        innerRef
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListItem with data, icon and subcategories 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="MuiButtonBase-root-160 MuiListItem-root-150 MuiListItem-default-153 MuiListItem-gutters-157 MuiListItem-button-158"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            aria-hidden={true}
            className="fa fa-true MuiListItemIcon-root-162"
          />
          <div
            className="MuiListItemText-root-163 MuiListItemText-inset-164"
          >
            <h3
              className="MuiTypography-root-169 MuiTypography-subheading-176 MuiListItemText-primary-166"
            >
              Name
            </h3>
          </div>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-193"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root-199"
          />
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                ListItem
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                with data, icon and subcategories
              </h2>
            </div>
            <div
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "WebkitFontSmoothing": "antialiased",
                    "color": "#444",
                    "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                    "fontSize": "15px",
                  }
                }
              >
                common info
              </div>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "backgroundColor": "#fafafa",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    WithStyles(ListItems)
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        id
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            0
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        name
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            Name
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        handleClick
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#170",
                                }
                              }
                            >
                              handleClick()
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        icon
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            menu
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        subcategory
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    id
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    1
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    Name
                                    "
                                  </span>
                                  , 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    icon
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    menu
                                    "
                                  </span>
                                  , 
                                  …
                                  }
                                </span>
                                }
                              </span>
                              ]
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  WithStyles(ListItems)
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        classes
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        innerRef
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span />
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
